tests/NormalTests/paczka1/small_fuzzy/88561133.err
Error in line 2: jqdqZRY A291 30,9
Error in line 12: m1404wC A291 160,1
